--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="hello"></string>
     <string name="app_name">中国象棋</string>
+    <string name="cannot_reget_anymore">哥们，不能再悔了!</string>
+    <string name="repeat_move_chess">哥们，换个走法呗!</string>
 </resources>
